[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/EndOfGame/message.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/EndOfGame/buttons.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/EndOfGame/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/EndOfGame/endOfGame.gd" type="Script" id=4]

[node name="endOfGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.529694
margin_top = -1.25995
margin_right = 0.529663
margin_bottom = -1.25995
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nextLevel" type="CanvasLayer" parent="."]

[node name="Retry" type="ColorRect" parent="nextLevel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.18921
margin_right = 1.18921
color = Color( 0.129412, 0.109804, 0.109804, 0.819608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="nextLevel/Retry"]
anchor_right = 1.0
margin_top = 49.0
margin_bottom = 174.0
custom_fonts/font = ExtResource( 3 )
text = "SCORE
00000000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="nextLevel/Retry"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 132.137
margin_top = -194.325
margin_right = 55.1366
margin_bottom = 96.6749
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 1 )
text = "GOOD game

"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="nextLevel/Retry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = 176.5
margin_right = 180.0
margin_bottom = 241.5
custom_fonts/font = ExtResource( 2 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelButton" type="Button" parent="nextLevel/Retry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = 53.5
margin_right = 180.0
margin_bottom = 118.5
custom_fonts/font = ExtResource( 2 )
text = "Niveau Suivant"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="nextLevel/Retry/MenuButton" to="." method="_on_MenuButton_mouse_entered"]
[connection signal="pressed" from="nextLevel/Retry/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="mouse_entered" from="nextLevel/Retry/NextLevelButton" to="." method="_on_NextLevelButton_mouse_entered"]
[connection signal="pressed" from="nextLevel/Retry/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
